Fixed Reverie
- Resolved the issue when images are not showing with js-reveal after load more button is clicked (dme)

--- a/wp-content/themes/michelluarasi/sass/_partials/_base.scss
+++ b/wp-content/themes/michelluarasi/sass/_partials/_base.scss
@@ -20,6 +20,8 @@ $color-bright: #F5F7FA;
 
 // Other
 
+$icon-ext-link: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.826 10.83L9 8.006h6v6l-2.467-2.467-4.826 4.826L7 15.657l4.826-4.826z' fill-rule='evenodd'/%3E%3C/svg%3E");
+
 // END Variables
 
 
@@ -413,6 +415,24 @@ img{
     margin: 12px 0 12px 0;
 }
 
+.btn[target="_blank"]::after,
+.btn[rel~="external"]::after {
+  position: absolute;
+  content: "";
+  width: 0.9em;
+  height: 0.9em;
+  display: inline-block;
+  vertical-align: middle;
+  background-image: $icon-ext-link;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  margin-left: 6px;
+}
+
+.btn[target="_blank"],
+.btn[rel~="external"] {
+  padding-right: 36px;
+}
 
 .btn-l {
     height:     64px;
@@ -484,6 +504,12 @@ img{
 .btn-grey:active{
     color: #303133;
     background-color: #bcc2cc;
+}
+
+.btn-grey[target="_blank"]::after,
+.btn-grey[rel~="external"]::after {
+  background-image: $icon-ext-link;
+  fill: #000000;
 }
 
 /* White */
