--- a/wp-content/themes/michelluarasi/sass/_partials/_reverie.scss
+++ b/wp-content/themes/michelluarasi/sass/_partials/_reverie.scss
@@ -11,11 +11,12 @@
 	padding: 80px 0;
 	width: 100%;
 	height: auto;
-	min-height: 4800px;
 }
 
 .js-tumblr--list {
 	text-align: center;
+	min-height: 1200px;
+	min-height: 100vh;
 }
 
 .reverie-img{
